2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Bump changeset to include NIO2 fix
	(/etc/mtab --> /proc/mounts).
	See PR339.
	
2009-05-27  Andrew John Hughes  <ahughes@redhat.com>

	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/BasicService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/ClipboardService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/DownloadService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/DownloadServiceListener.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/ExtensionInstallerService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/FileContents.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/FileOpenService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/FileSaveService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/JNLPRandomAccessFile.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/PersistenceService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/PrintService.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/ServiceManager.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/ServiceManagerStub.java,
	* overlays/openjdk/jdk/src/share/classes/javax/jnlp/UnavailableServiceException.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/AppletDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/ApplicationDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/ComponentDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/DefaultLaunchHandler.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/ExtensionDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/IconDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/InformationDesc.java,
	* overlays/openjdk/jdk/src/share/classes/net/sourceforge/jnlp/InstallerDesc.java,