@@ -1213,9 +1213,9 @@ AC_DEFUN([AC_CHECK_FOR_OPENJDK],
                 SYSTEM_OPENJDK_DIR=
               ])
   if test -z "${SYSTEM_OPENJDK_DIR}"; then
-    for dir in /usr/lib/jvm/java-icedtea /usr/lib/jvm/java-openjdk \
-               /usr/lib/jvm/icedtea6 /usr/lib/jvm/java-6-openjdk \
-	       /usr/lib/jvm/openjdk; do
+    for dir in /usr/lib/jvm/java-openjdk /usr/lib/jvm/icedtea6 \
+    	       /usr/lib/jvm/java-6-openjdk /usr/lib/jvm/openjdk \
+	       /usr/lib/jvm/java-icedtea; do
        if test -d $dir; then
          SYSTEM_OPENJDK_DIR=$dir
 	 break
@@ -1251,9 +1251,9 @@ AC_DEFUN([AC_CHECK_FOR_ICEDTEA],
                 SYSTEM_ICEDTEA_DIR=
               ])
   if test -z "${SYSTEM_ICEDTEA_DIR}"; then
-    for dir in /usr/lib/jvm/java-icedtea /usr/lib/jvm/java-openjdk \
-               /usr/lib/jvm/icedtea6 /usr/lib/jvm/java-6-openjdk \
-	       /usr/lib/jvm/openjdk; do
+    for dir in /usr/lib/jvm/java-openjdk /usr/lib/jvm/icedtea6 \
+    	       /usr/lib/jvm/java-6-openjdk /usr/lib/jvm/openjdk \
+	       /usr/lib/jvm/java-icedtea; do
        if test -d $dir; then
          SYSTEM_ICEDTEA_DIR=$dir
 	 break
